# Edu_Cloud

./: .env  .gitignore  FINAL_TEST_REPORT.md  GIT_TEST_BRANCH_GUIDE.md  LAN_ACCESS_GUIDE.md  PERFORMANCE_OPTIMIZATION.md  PROJECT_CLEANUP_SUMMARY.md  README.md  TEST_REPORT.md  WEB_UI_README.md  api_record.md  app.db  app.db-shm  app.db-wal  configure_lan_access.py  database_dump.json  final_test_results.txt  gui_simple.py  inspect_db.py  main.py  py_admin_test.py  py_edu_test.py  pyproject.toml  reference.html  start_gui.py  start_web.py  test_cas_api.py  test_cas_direct.py  test_results.txt  web_ui.py  web_ui_simple.py  web_ui_v1.py  web_ui_v2.py
gui/: GUI_README.md  __init__.py  api_client.py  config.py  main.py
gui/models/: __init__.py  assignment.py  course.py  discussion.py  notification.py  user.py
gui/services/: __init__.py  assignment_service.py  async_service.py  auth_service.py  course_service.py  discussion_service.py  notification_service.py
gui/utils/: __init__.py  async_utils.py  token_manager.py
gui/views/: __init__.py  admin_window.py  assignment_detail_interface.py  assignment_detail_view.py  assignment_list_interface.py  assignment_list_view.py  course_detail_interface.py  course_wall_interface.py  login_view.py  login_window.py  main_window.py  schedule_interface.py  setting_interface.py
gui/views/admin/: __init__.py  dashboard_interface.py  user_management_interface.py
gui/views/components/: __init__.py  assignment_card.py  course_card.py  sync_dialog.py
src/edu_cloud/admin/: ADMIN_README.md  PASSWORD_SECURITY.md  __init__.py  api.py
(+34 files in other folders)
