[project]
name = "edu-cloud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "buptmw>=0.1.4",
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "flask-jwt-extended>=4.5.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<4.0.0",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.3.0",
    "sqlalchemy>=2.0.44",
    "email-validator>=2.0.0",
    "gunicorn>=21.0.0",
    "pytest>=9.0.1",
    "pywebio>=1.8.0",
    "requests>=2.31.0",
    "customtkinter>=5.2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
